
[build-system]
requires = ["setuptools", "setuptools-scm", "streamlit", "numpy",
            "flightcondition"]
build-backend = "setuptools.build_meta"

[project]
name = "flightcondition_webpage"
authors = [
    {name = "Matthew C. Jones", email = "matt.c.jones.aoe@gmail.com"},
]
description = "Web application of Flightcondition Python package."
readme = "README.md"
version = "26.04.20"
requires-python = ">=3.10"
keywords = ["webapp", "aerospace", "engineering"]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Streamlit",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["streamlit", "numpy", "flightcondition"]
